[gd_scene load_steps=12 format=3 uid="uid://bseqrj5lg08it"]

[ext_resource type="Script" path="res://Scene/Root.gd" id="1_h7r77"]
[ext_resource type="PackedScene" uid="uid://rmruae8fguk4" path="res://Hud/LORED/lored_container.tscn" id="2_egnhq"]
[ext_resource type="PackedScene" uid="uid://dlt6lvasr6c46" path="res://Hud/Upgrade/upgrade_container.tscn" id="3_3omr7"]
[ext_resource type="PackedScene" uid="uid://cb3ej8nlybhvm" path="res://Hud/icon_button.tscn" id="3_agafs"]
[ext_resource type="PackedScene" uid="uid://c4jcyq4x5dq51" path="res://Hud/Menu/menu.tscn" id="4_y1gq0"]
[ext_resource type="Theme" uid="uid://cwt08llwihqii" path="res://Theme/ShadowText.tres" id="5_fcpu4"]
[ext_resource type="FontFile" uid="uid://cubavfw1lomep" path="res://Fonts/Roboto-Black.ttf" id="5_fsywq"]
[ext_resource type="PackedScene" uid="uid://dg6lv67h5eiuj" path="res://Hud/Wallet/wallet.tscn" id="6_pdtq1"]
[ext_resource type="PackedScene" uid="uid://c2quvpihdkvj2" path="res://Hud/Earnings Report/earnings_report.tscn" id="8_gl0q2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge2kb"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alvwj"]
size = Vector2(1280, 720)

[node name="Root" type="MarginContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_h7r77")

[node name="LORED Container" parent="." instance=ExtResource("2_egnhq")]
layout_mode = 2

[node name="Left" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="Left" type="VBoxContainer" parent="Left"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Menu Buttons" type="VBoxContainer" parent="Left/Left"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Menu Button" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Wallet Button" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Upgrades Button" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Purchasable Upgrade Count" type="RichTextLabel" parent="Left/Left/Menu Buttons/Upgrades Button"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("5_fcpu4")
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/normal_font = ExtResource("5_fsywq")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "4"
fit_content = true
autowrap_mode = 0

[node name="Stage1" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Stage2" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Stage3" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Stage4" parent="Left/Left/Menu Buttons" instance=ExtResource("3_agafs")]
unique_name_in_owner = true
layout_mode = 2

[node name="Left2" type="VBoxContainer" parent="Left"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Random Wishes" type="VBoxContainer" parent="Left/Left2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Main Wishes" type="VBoxContainer" parent="Left/Left2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Dev" type="VBoxContainer" parent="Left"]
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2

[node name="Dev" type="Button" parent="Left/Dev"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy 4 Loreds"

[node name="Dev2" type="Button" parent="Left/Dev"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Stage 1
"

[node name="Dev4" type="Button" parent="Left/Dev"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "0"

[node name="Dev3" type="Button" parent="Left/Dev"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Stage 2"

[node name="Dev5" type="Button" parent="Left/Dev"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Load 2
"

[node name="FPS" type="RichTextLabel" parent="Left/Dev"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Big text"
fit_content = true

[node name="Right" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 15

[node name="Upgrade Container" parent="." instance=ExtResource("3_3omr7")]
visible = false
layout_mode = 2

[node name="Offline Report" parent="." instance=ExtResource("8_gl0q2")]
visible = false
layout_mode = 2

[node name="Texts Parent" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Tooltip" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Tooltip Position Display" type="Panel" parent="Control/Tooltip"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ge2kb")

[node name="Wallet" parent="." instance=ExtResource("6_pdtq1")]
visible = false
layout_mode = 2

[node name="Menu" parent="." instance=ExtResource("4_y1gq0")]
visible = false
layout_mode = 2

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 7
monitorable = false

[node name="ScreenArea" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(640, 360)
shape = SubResource("RectangleShape2D_alvwj")

[connection signal="pressed" from="Left/Left/Menu Buttons/Menu Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Left/Left/Menu Buttons/Wallet Button" to="." method="_on_wallet_button_pressed"]
[connection signal="pressed" from="Left/Left/Menu Buttons/Upgrades Button" to="." method="_on_upgrades_button_pressed"]
[connection signal="sort_children" from="Left/Left2/Random Wishes" to="." method="_on_random_wishes_sort_children"]
[connection signal="sort_children" from="Left/Left2/Main Wishes" to="." method="_on_main_wishes_sort_children"]
[connection signal="pressed" from="Left/Dev/Dev" to="." method="_on_dev_pressed"]
[connection signal="pressed" from="Left/Dev/Dev2" to="." method="_on_dev_2_pressed"]
[connection signal="pressed" from="Left/Dev/Dev4" to="." method="_on_dev_4_pressed"]
[connection signal="pressed" from="Left/Dev/Dev3" to="." method="_on_dev_3_pressed"]
[connection signal="pressed" from="Left/Dev/Dev5" to="." method="_on_dev_5_pressed"]
[connection signal="body_exited" from="Area2D" to="." method="_on_screen_area_body_exited"]
